--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -10,8 +10,19 @@
 // Active Admin's got SASS!
 @import "active_admin/mixins";
 @import "active_admin/base";
-
+@import 'activeadmin/quill_editor/quill.snow';
+@import 'activeadmin/quill_editor_input';
 // Overriding any non-variable Sass must be done after the fact.
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+
+
+.note-body {
+    padding: 1em;
+    margin: 1em;
+    background-color: #e6e6e6;
+    -webkit-box-shadow: 10px 10px 22px -1px rgba(0,0,0,0.29);
+    -moz-box-shadow: 10px 10px 22px -1px rgba(0,0,0,0.29);
+    box-shadow: 10px 10px 22px -1px rgba(0,0,0,0.29);
+}
